Version 1.2: 2013-12-17
  - Massive improvements in OpenMP parallelization.
  - MPI libraries are no longer mandatory.
  - Best matching units are saved.
  - Option for specifying an initial codebook for the map.
  - ESOM .lrn input format added.
  - Parsing of white-space characters corrected.
  - Long-named command line switches for specifying SOM dimensions.
  - Fine-grained control of which interim files to save across epochs
  - Option in Makefile for building shared library.
  
Version 1.1.2: 2013-11-28

  - Toroid maps were added. 
  - Initial radius is exposed as a parameter via the command line interface. 
  - Formats of codebook and U-matrix export are compatible with Databionic ESOM Tools for advanced visualisation.
  - Bug fixes: codebook update with a compact support was removed, NaN entry no longer appears in U-matrices. 

Version 1.0: 2013-05-14
  - Initial release.